# yahoo-finance-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  publish.yml
src/: chart.rs  error.rs  history.rs  interval.rs  lib.rs  macros.rs  profile.rs  streaming.rs
src/realtime/: .gitignore  mod.rs  quote.rs
src/yahoo/: .gitignore  chart.rs  mod.rs  realtime.proto  web_scraper.rs
tests/: history.rs  intervals.rs  profile.rs
tests/history_data/: aapl.json  no_quote_data.json  no_timestamp_data.json  not_found.json
tests/profile_data/: aapl.html  invalid_json.html  missing_data.html  qqq.html
