[package]
name = "yahoo-finance"
version = "0.3.0"
authors = [ "Fred Briden <fred.briden@gmail.com>" ]
license = "MIT"
description = "An API to get financial data from Yahoo."
keywords = [ "yahoo", "finance", "stocks" ]
readme = "README.md"
edition = "2018"

include = [ "Cargo.toml", "LICENSE", "README.md", "src/**/*.rs" ]

repository = "https://github.com/fbriden/yahoo-finance-rs"
homepage = "https://github.com/fbriden/yahoo-finance-rs"

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [ "async-await", "sink", "std" ] }
market-finance = "0.3"
protobuf = "2"
reqwest = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "0.2", default-features = false, features = [ "stream", "rt-threaded", "macros" ]}
tokio-tungstenite = { version = "0.11", features = [ "tls" ] }
url = "2.1"


[dev-dependencies]
mockito = "0.27"
tokio-test = "0.2"

[build-dependencies]
protobuf-codegen-pure = "2"